# chimera

./: .env.example  .gitignore  CLAUDE.md  README.md  claude-progress.txt  decisions.md  feature-list.json  init.sh  pod_setup_grpo.sh  pyproject.toml  pyrightconfig.json  requirements.txt
.claude/: settings.json
.github/workflows/: ci.yml
_archive/: chimera2.bundle
_archive/chimera2-donor/: README.md  gate.py  test_rails.py
checkpoints/sft-r4-checkpoint-300/: adapter_config.json
checkpoints/sft-r4-checkpoint-304/: tokenizer_config.json  trainer_state.json
config/: config.yaml
cs2-demo-viewer/: EXTRACT.sh
cs2-tools/: EXTRACT.sh
data/: registry.json  sft_coverage_report.txt  sft_dataset.json
data/captions/: CROSSVAL.md  captions.jsonl  discriminative_check.json
data/eval/: pseudo_gold_stub.jsonl
data/predictions/: comparison_20260409_045034.json  comparison_20260409_045410.json  comparison_20260409_051433.json  comparison_20260409_053342.json
docs/: adversarial-review.md  alignment-delta.md  anthropic-lineage.md  bridge-design.md  cloud-session.md  corpus-audit.md  corpus-implementation-audit.md  corpus-strategy.md  datasheet.md  decisions-ledger.md  decisions.md  event-encoder-design.md  first-principles-plan.md  infra-plan.md  learning-curve-finding.md  methodology-review.md  methodology.md  pod-runbook.md  retrain-recipe-knobs4-7.md  retrain-recipe.md  reward-candidates.md  round-encoder-design.md  three-level-architecture.md  viewer-grpo-overlay.md  wall-detection-plan.md  world-model-design.md
harness/: init.sh  progress.md  tools-features.json  viewer-features.json
paper/: Makefile  OUTLINE.md  PIVOT_NOTES.md  main.tex  references.bib
paper/archive-vlm/: README.md  main.tex  neurips_2026.sty
paper/submission/: Makefile  body.tex  main_iclr2027.tex  main_neurips2027.tex
review/: label_studio_config.xml
review/samples/: enemy_spotted.json
scripts/: _corpus.py  auto_stop_pod.sh  baseline_eval.py  bridge_smoke.py  build_encoder_embedding_cache.py  build_label_candidates.py  build_pseudo_gold.py  build_sft_dataset.py  build_tick_sequences.py  build_v3_features.py  build_viewer_data.py  capture_screenshots.py  cloud_quantize.py  cloud_session_setup.sh  collect_with_transcript.py  collect_youtube.py  compare_changepoint_variants.py  compare_models.py  data.py  debug_eval.py  decision_eval.py  dist_coverage_eval.py  draft_pseudo_gold_abc.py  encoder_sigma_s_diagnostic.py  eval_ablate.py  eval_recon.py  eval_scorer.py  eval_world_model.py  evaluate.py  event_boundary_check.py  export_for_review.py  export_gen_viewer.py  export_viewer_data.py  extract_grpo_samples.py  facing_bias_check.py  fit_dist_edges.py  gen_bridge_sft.py  gen_demo.py  generate_review.py  generate_sft_labels.py  (+48 more)
scripts/_archive/: discriminative_check.py  event_timing_precision.py  export_viewer_round.py  label_app.py  (+13 more)
src/: __init__.py  netcon.py  prompts.py
tests/: conftest.py  test_clean_blob.py  test_corpus_invariants.py  test_model_smoke.py  test_no_value_leak.py  test_rewards.py  test_schema_dims.py
viewer/: architecture.html  gen_viewer.html
viewer-harness/: claude-progress.txt  init.sh
(+1543 files in other folders)
