[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "chimera"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # Core
    "torch>=2.0.0",
    "transformers>=4.45.0",
    "accelerate>=0.27.0",
    # Vision models
    "timm>=0.9.0",
    "einops>=0.7.0",
    # Claude API (baseline comparisons)
    "anthropic>=0.25.0",
    # Image processing
    "Pillow>=10.0.0",
    "opencv-python>=4.9.0",
    # Data handling
    "pyyaml>=6.0",
    "pandas>=2.0.0",
    "polars>=0.19.0",
    "pyarrow>=10.0.0",
    "awpy>=2.0.0",
    # CS2 demo tools
    "cs2-tools[parse] @ git+https://github.com/skkwowee/cs2-tools.git",
    # Utilities
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
    "datasets>=2.14.0",
    # Training
    "trl>=0.12.0",
    "peft>=0.13.0",
    "bitsandbytes>=0.43.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.3.0",
    "pre-commit>=3.0.0",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = [
  "E402",   # module-level import not at top — unavoidable in scripts with sys.path manipulation
  "E741",   # ambiguous variable name — acceptable in math-heavy code (l, w, etc.)
  "UP007",  # use X | Y for union types — keep Optional for readability
  "RUF001", # ambiguous unicode in strings — intentional math notation (×, etc.)
  "RUF002", # ambiguous unicode in docstrings — intentional math notation (α, β, γ, etc.)
  "RUF003", # ambiguous unicode in comments — intentional math notation (−, etc.)
]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E402"]  # scripts often need sys.path before imports
"scripts/generate_review.py" = ["E402", "E501"]  # HTML template strings
